[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taulk"
version = "0.1.0"
description = "Push-to-talk voice interface for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.0.23",
    "pynput>=1.8.1",
    "sounddevice>=0.5.0",
    "numpy",
    "soundfile>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
    "mlx-whisper>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/command"]

[project.scripts]
taulk = "command.main:cli"
